# ServerBoi-Embed-Manager

./: Cargo.toml  README.md
src/: main.rs
