[package]
name = "serverboi_embed_manager"
version = "0.1.0"
authors = ["Awlsring <mattcanemail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", 
"rustls_backend"], version = "0.9.0-rc.2"}
dotenv = "0.15.0"
serde_json = "1.0"
chrono = "0.4.19"
a2s = "0.2.3"